# healway-test

./: .env.example  .gitignore  Dockerfile  README.md  components.json  env.d.ts  firebase-config.ts  link-envs.ts  middleware-old.ts  package.json  turbo.json  types.ts
app/: globals.css  layout.tsx
app/(main)/: layout.tsx  page.tsx
app/api/summarize/: route.ts
app/auth/: layout.tsx  page.tsx
app/auth/sign-out/: page.tsx
apps/healway/: firebase-config.ts  package.json  types.ts
apps/llm-server/: .gitignore  README.md  main.py  package.json  pyproject.toml
apps/llm-server/api/: __init__.py  summarize.py
apps/llm-server/lib/llm/: __init__.py  openai.py
core/: fonts.ts
core/client-side-handlers/: summarize.ts
core/components/: audio-recordings-list.tsx  patient-summary.tsx  recorder.tsx  recordings-view.tsx
core/components/audio-recording/: index.tsx  tab-view.tsx
core/components/form/: auth-form.tsx
core/components/modals/: settings.tsx
core/components/navigation/: app-sidebar.tsx  nav-main.tsx  nav-user.tsx
core/components/ui/: accordion.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  sheet.tsx  (+13 more)
core/hooks/: use-recorder.ts  use-recording.ts  use-recordings.ts  use-settings.ts
core/lib/: firebase-utils.ts  firebase.ts  llm.ts
core/provider/: modal-provider.tsx  session-provider.tsx
(+30 files in other folders)
