[tool.poetry]
name = "healway-apps"
version = "0.1.0"
description = "Monorepo containing Healway next js and fastapi apps."
authors = ["Tejas Ladhe <tejasladhe24@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.115.11"
python-dotenv = "^1.0.1"
langchain = "^0.3.20"
langchain-openai = "^0.3.8"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0" # Testing framework
black = "^24.0.0" # Code formatter
ruff = "^0.1.0"   # Linter for Python

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
